# schmimmdee

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
bins/: greyscale.rs  histogram.rs  minmax.rs  stringpattern.rs
src/: lib.rs  main.rs
